Fix social links being cut on smaller screens

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     margin-left: auto;
     margin-right: auto;
 }
+@media (min-width:768px){
+    .platform-link-div {
+		text-align:right
+	}
+}
 @media (max-width:768px){
     .responsive-btn{
         display:block
